@@ -1,6 +1,15 @@
 2003-07-01  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
 	* mod_vlad.c :
+	* policy.l :
+	* util.c :
+	* util.h :
+
+	  - Separated config directives into 3: userfile, policyfile and enable.
+
+	  - Tons of cleanup.
+
+	* mod_vlad.c :
 
 	  - Module now forces a WWW-Authenticate header even without the
 	    per-dir "AuthName" and "AuthType" directives.
